# sterm2

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE.txt
src/: CMakeLists.txt
src/application/: CMakeLists.txt
src/application/src/: main.cpp
src/settings/: CMakeLists.txt
src/settings/inc/: Settings.hpp  settings.hpp
src/settings/src/: Settings.cpp  settings.cpp
src/terminal/: CMakeLists.txt
src/terminal/inc/: Terminal.hpp
src/terminal/src/: Terminal.cpp  main.cpp
